Fix product gallery zoom bleed

--- a/frontendV1/src/index.css
+++ b/frontendV1/src/index.css
@@ -2884,7 +2884,8 @@ img {
   will-change: transform;
 }
 
-.product-gallery:hover img {
+.product-gallery:hover > img,
+.product-gallery:hover .product-gallery-slide.is-active img {
   transform: scale(2.2);
 }
 
